Level 복제 문제 , Camera 컴포넌트가 RenderMgr 에 등록되는 문제,  Transform 월드 방향 문제 해결, EditorObjMgr, GameObjectEx 클래스 추가

--- a/Project/Client/Client.vcxproj.filters
+++ b/Project/Client/Client.vcxproj.filters
@@ -12,92 +12,101 @@
     <Filter Include="Default\ImGui">
       <UniqueIdentifier>{b7bd5302-5046-45fb-89f6-f91d6ba57d98}</UniqueIdentifier>
     </Filter>
-    <Filter Include="ImGuiMgr">
-      <UniqueIdentifier>{3ac4cd6f-e2f4-4c7b-8d88-a38d1ed0a9a4}</UniqueIdentifier>
+    <Filter Include="01. Manager">
+      <UniqueIdentifier>{57916377-1303-4ef2-b497-02cbdd6786f5}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI">
+    <Filter Include="02. UI">
       <UniqueIdentifier>{1e0e102a-b2d6-456e-a7bb-357f0a9402c8}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\1. Outliner">
+    <Filter Include="02. UI\1. Outliner">
       <UniqueIdentifier>{ca9a2704-c34f-4a5c-8e93-f8bc649fa257}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\2. Content">
+    <Filter Include="02. UI\2. Content">
       <UniqueIdentifier>{3796fb55-06bb-4440-a01f-ff07bcbf9237}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\3. Inspector">
+    <Filter Include="02. UI\3. Inspector">
       <UniqueIdentifier>{a22ae863-10f2-495b-993c-36a9dd4dbf5a}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\3. Inspector\AssetUI">
+    <Filter Include="02. UI\3. Inspector\AssetUI">
       <UniqueIdentifier>{7f84369d-304c-4d33-be1d-7874b1688baa}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\3. Inspector\CompoenntUI">
-      <UniqueIdentifier>{3cb11ecc-096f-4ec5-80e8-1c85a6f69435}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="UI\3. Inspector\CompoenntUI\MeshRender">
-      <UniqueIdentifier>{2f3507fa-9d3e-4e1e-9bda-4b916e7ce1f3}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="UI\3. Inspector\CompoenntUI\Transform">
-      <UniqueIdentifier>{3626ec46-7c48-4db7-ab6c-a854c2a08359}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="UI\3. Inspector\CompoenntUI\Animator2D">
-      <UniqueIdentifier>{c0675e0a-37e5-43df-8ed0-8eb87cfad3c6}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="UI\3. Inspector\CompoenntUI\Collider2D">
-      <UniqueIdentifier>{ef9ca7a1-fc16-4f28-baa8-3e19d7de05f1}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="UI\3. Inspector\CompoenntUI\Light2D">
-      <UniqueIdentifier>{a48af97e-5914-4cf6-b9a1-2b4949989d81}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="UI\3. Inspector\CompoenntUI\Camera">
-      <UniqueIdentifier>{a4512bfa-9582-431c-82ea-a2c8af981e47}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="UI\3. Inspector\CompoenntUI\Tilemap">
-      <UniqueIdentifier>{df10da3a-eb33-4ceb-b840-fc70ad062db1}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="UI\3. Inspector\CompoenntUI\Animator2D\Editor">
-      <UniqueIdentifier>{68d440b3-c6a3-4f83-9cb5-953cec47cb2e}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="UI\3. Inspector\CompoenntUI\Tilemap\Editor">
-      <UniqueIdentifier>{ff1585ec-b0bd-4c08-8ee5-4a93784edc99}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="UI\3. Inspector\CompoenntUI\Particle">
-      <UniqueIdentifier>{ab81cf69-0b94-4567-a574-53ea04e2ba60}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="UI\3. Inspector\AssetUI\ComputeShader">
+    <Filter Include="02. UI\3. Inspector\AssetUI\ComputeShader">
       <UniqueIdentifier>{8cd541db-952d-4236-b331-1da0a09fa1db}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\3. Inspector\AssetUI\GraphicsShader">
+    <Filter Include="02. UI\3. Inspector\AssetUI\GraphicsShader">
       <UniqueIdentifier>{9fdd3322-99ac-453e-93b3-a6917bb59705}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\3. Inspector\AssetUI\MaterialUI">
+    <Filter Include="02. UI\3. Inspector\AssetUI\MaterialUI">
       <UniqueIdentifier>{096dfd77-6d01-4d83-8bfe-e5ac48ebd22f}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\3. Inspector\AssetUI\MeshData">
+    <Filter Include="02. UI\3. Inspector\AssetUI\MeshData">
       <UniqueIdentifier>{aeafb582-3795-43fe-9ef3-6f87fa13e751}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\3. Inspector\AssetUI\MeshUI">
+    <Filter Include="02. UI\3. Inspector\AssetUI\MeshUI">
       <UniqueIdentifier>{bebd969d-ccee-432f-bd8f-923f53742850}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\3. Inspector\AssetUI\Sound">
+    <Filter Include="02. UI\3. Inspector\AssetUI\Sound">
       <UniqueIdentifier>{618b8d15-0a4e-478b-96b0-cfe3990746eb}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\3. Inspector\AssetUI\TextureUI">
+    <Filter Include="02. UI\3. Inspector\AssetUI\TextureUI">
       <UniqueIdentifier>{56109a16-99bf-46a0-9900-c725bf46ca8c}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\4. MenuUI">
+    <Filter Include="02. UI\3. Inspector\CompoenntUI">
+      <UniqueIdentifier>{3cb11ecc-096f-4ec5-80e8-1c85a6f69435}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. UI\3. Inspector\CompoenntUI\MeshRender">
+      <UniqueIdentifier>{2f3507fa-9d3e-4e1e-9bda-4b916e7ce1f3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. UI\3. Inspector\CompoenntUI\Transform">
+      <UniqueIdentifier>{3626ec46-7c48-4db7-ab6c-a854c2a08359}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. UI\3. Inspector\CompoenntUI\Animator2D">
+      <UniqueIdentifier>{c0675e0a-37e5-43df-8ed0-8eb87cfad3c6}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. UI\3. Inspector\CompoenntUI\Animator2D\Editor">
+      <UniqueIdentifier>{68d440b3-c6a3-4f83-9cb5-953cec47cb2e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. UI\3. Inspector\CompoenntUI\Collider2D">
+      <UniqueIdentifier>{ef9ca7a1-fc16-4f28-baa8-3e19d7de05f1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. UI\3. Inspector\CompoenntUI\Light2D">
+      <UniqueIdentifier>{a48af97e-5914-4cf6-b9a1-2b4949989d81}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. UI\3. Inspector\CompoenntUI\Camera">
+      <UniqueIdentifier>{a4512bfa-9582-431c-82ea-a2c8af981e47}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. UI\3. Inspector\CompoenntUI\Tilemap">
+      <UniqueIdentifier>{df10da3a-eb33-4ceb-b840-fc70ad062db1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. UI\3. Inspector\CompoenntUI\Tilemap\Editor">
+      <UniqueIdentifier>{ff1585ec-b0bd-4c08-8ee5-4a93784edc99}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. UI\3. Inspector\CompoenntUI\Particle">
+      <UniqueIdentifier>{ab81cf69-0b94-4567-a574-53ea04e2ba60}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02. UI\4. MenuUI">
       <UniqueIdentifier>{ef7731a4-4d95-48c8-a635-5f0b8bbd303a}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\5. ListUI">
+    <Filter Include="02. UI\5. ListUI">
       <UniqueIdentifier>{41ffccb0-57b8-4886-bfb4-ba472c7da766}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\6. Module">
+    <Filter Include="02. UI\6. Module">
       <UniqueIdentifier>{3d803ed6-5adb-431a-b1d7-31b38f878af7}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\6. Module\TreeUI">
+    <Filter Include="02. UI\6. Module\TreeUI">
       <UniqueIdentifier>{532961be-a48f-4610-8e54-d8ebe4cb97bf}</UniqueIdentifier>
     </Filter>
-    <Filter Include="UI\6. Module\ParamUI">
+    <Filter Include="02. UI\6. Module\ParamUI">
       <UniqueIdentifier>{60df357a-40ef-43a5-89d2-a22058330bf5}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="01. Manager\01. UIMgr">
+      <UniqueIdentifier>{3ac4cd6f-e2f4-4c7b-8d88-a38d1ed0a9a4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="01. Manager\02. EditorObjMgr">
+      <UniqueIdentifier>{117a9306-9b3d-4ac3-880e-8f74985a7ea0}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="01. Manager\02. EditorObjMgr\GameObjectEx">
+      <UniqueIdentifier>{168f4def-da3b-44c6-8974-d58a6a84e8e8}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -141,88 +150,94 @@
       <Filter>Default</Filter>
     </ClInclude>
     <ClInclude Include="UI.h">
-      <Filter>UI</Filter>
+      <Filter>02. UI</Filter>
     </ClInclude>
     <ClInclude Include="HYImGuiMgr.h">
-      <Filter>ImGuiMgr</Filter>
+      <Filter>01. Manager\01. UIMgr</Filter>
     </ClInclude>
     <ClInclude Include="Inspector.h">
-      <Filter>UI\3. Inspector</Filter>
+      <Filter>02. UI\3. Inspector</Filter>
     </ClInclude>
     <ClInclude Include="Content.h">
-      <Filter>UI\2. Content</Filter>
+      <Filter>02. UI\2. Content</Filter>
     </ClInclude>
     <ClInclude Include="Outliner.h">
-      <Filter>UI\1. Outliner</Filter>
+      <Filter>02. UI\1. Outliner</Filter>
     </ClInclude>
     <ClInclude Include="TransformUI.h">
-      <Filter>UI\3. Inspector\CompoenntUI\Transform</Filter>
+      <Filter>02. UI\3. Inspector\CompoenntUI\Transform</Filter>
     </ClInclude>
     <ClInclude Include="MeshRenderUI.h">
-      <Filter>UI\3. Inspector\CompoenntUI\MeshRender</Filter>
+      <Filter>02. UI\3. Inspector\CompoenntUI\MeshRender</Filter>
     </ClInclude>
     <ClInclude Include="ComponentUI.h">
-      <Filter>UI\3. Inspector\CompoenntUI</Filter>
+      <Filter>02. UI\3. Inspector\CompoenntUI</Filter>
     </ClInclude>
     <ClInclude Include="ListUI.h">
-      <Filter>UI\5. ListUI</Filter>
+      <Filter>02. UI\5. ListUI</Filter>
     </ClInclude>
     <ClInclude Include="Light2DUI.h">
-      <Filter>UI\3. Inspector\CompoenntUI\Light2D</Filter>
+      <Filter>02. UI\3. Inspector\CompoenntUI\Light2D</Filter>
     </ClInclude>
     <ClInclude Include="Collider2DUI.h">
-      <Filter>UI\3. Inspector\CompoenntUI\Collider2D</Filter>
+      <Filter>02. UI\3. Inspector\CompoenntUI\Collider2D</Filter>
     </ClInclude>
     <ClInclude Include="Animator2DUI.h">
-      <Filter>UI\3. Inspector\CompoenntUI\Animator2D</Filter>
+      <Filter>02. UI\3. Inspector\CompoenntUI\Animator2D</Filter>
     </ClInclude>
     <ClInclude Include="CameraUI.h">
-      <Filter>UI\3. Inspector\CompoenntUI\Camera</Filter>
+      <Filter>02. UI\3. Inspector\CompoenntUI\Camera</Filter>
     </ClInclude>
     <ClInclude Include="TilemapUI.h">
-      <Filter>UI\3. Inspector\CompoenntUI\Tilemap</Filter>
+      <Filter>02. UI\3. Inspector\CompoenntUI\Tilemap</Filter>
     </ClInclude>
     <ClInclude Include="TilemapEditor.h">
-      <Filter>UI\3. Inspector\CompoenntUI\Tilemap\Editor</Filter>
+      <Filter>02. UI\3. Inspector\CompoenntUI\Tilemap\Editor</Filter>
     </ClInclude>
     <ClInclude Include="AnimationEditor.h">
-      <Filter>UI\3. Inspector\CompoenntUI\Animator2D\Editor</Filter>
+      <Filter>02. UI\3. Inspector\CompoenntUI\Animator2D\Editor</Filter>
     </ClInclude>
     <ClInclude Include="ParticleSystemUI.h">
-      <Filter>UI\3. Inspector\CompoenntUI\Particle</Filter>
+      <Filter>02. UI\3. Inspector\CompoenntUI\Particle</Filter>
     </ClInclude>
     <ClInclude Include="TreeUI.h">
-      <Filter>UI\6. Module\TreeUI</Filter>
+      <Filter>02. UI\6. Module\TreeUI</Filter>
     </ClInclude>
     <ClInclude Include="AssetUI.h">
-      <Filter>UI\3. Inspector\AssetUI</Filter>
+      <Filter>02. UI\3. Inspector\AssetUI</Filter>
     </ClInclude>
     <ClInclude Include="TextureUI.h">
-      <Filter>UI\3. Inspector\AssetUI\TextureUI</Filter>
+      <Filter>02. UI\3. Inspector\AssetUI\TextureUI</Filter>
     </ClInclude>
     <ClInclude Include="SoundUI.h">
-      <Filter>UI\3. Inspector\AssetUI\Sound</Filter>
+      <Filter>02. UI\3. Inspector\AssetUI\Sound</Filter>
     </ClInclude>
     <ClInclude Include="MeshUI.h">
-      <Filter>UI\3. Inspector\AssetUI\MeshUI</Filter>
+      <Filter>02. UI\3. Inspector\AssetUI\MeshUI</Filter>
     </ClInclude>
     <ClInclude Include="MeshDataUI.h">
-      <Filter>UI\3. Inspector\AssetUI\MeshData</Filter>
+      <Filter>02. UI\3. Inspector\AssetUI\MeshData</Filter>
     </ClInclude>
     <ClInclude Include="MaterialUI.h">
-      <Filter>UI\3. Inspector\AssetUI\MaterialUI</Filter>
+      <Filter>02. UI\3. Inspector\AssetUI\MaterialUI</Filter>
     </ClInclude>
     <ClInclude Include="GraphicsShaderUI.h">
-      <Filter>UI\3. Inspector\AssetUI\GraphicsShader</Filter>
+      <Filter>02. UI\3. Inspector\AssetUI\GraphicsShader</Filter>
     </ClInclude>
     <ClInclude Include="ComputeShaderUI.h">
-      <Filter>UI\3. Inspector\AssetUI\ComputeShader</Filter>
+      <Filter>02. UI\3. Inspector\AssetUI\ComputeShader</Filter>
     </ClInclude>
     <ClInclude Include="ParamUI.h">
-      <Filter>UI\6. Module\ParamUI</Filter>
+      <Filter>02. UI\6. Module\ParamUI</Filter>
     </ClInclude>
     <ClInclude Include="MenuUI.h">
-      <Filter>UI\4. MenuUI</Filter>
+      <Filter>02. UI\4. MenuUI</Filter>
+    </ClInclude>
+    <ClInclude Include="HYGameObjectEx.h">
+      <Filter>01. Manager\02. EditorObjMgr\GameObjectEx</Filter>
+    </ClInclude>
+    <ClInclude Include="HYEditorObjMgr.h">
+      <Filter>01. Manager\02. EditorObjMgr</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -252,91 +267,97 @@
     </ClCompile>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="UI.cpp">
-      <Filter>UI</Filter>
+      <Filter>02. UI</Filter>
     </ClCompile>
     <ClCompile Include="HYImGuiMgr.cpp">
-      <Filter>ImGuiMgr</Filter>
+      <Filter>01. Manager\01. UIMgr</Filter>
     </ClCompile>
     <ClCompile Include="Inspector.cpp">
-      <Filter>UI\3. Inspector</Filter>
+      <Filter>02. UI\3. Inspector</Filter>
     </ClCompile>
     <ClCompile Include="Content.cpp">
-      <Filter>UI\2. Content</Filter>
+      <Filter>02. UI\2. Content</Filter>
     </ClCompile>
     <ClCompile Include="Outliner.cpp">
-      <Filter>UI\1. Outliner</Filter>
+      <Filter>02. UI\1. Outliner</Filter>
     </ClCompile>
     <ClCompile Include="TransformUI.cpp">
-      <Filter>UI\3. Inspector\CompoenntUI\Transform</Filter>
+      <Filter>02. UI\3. Inspector\CompoenntUI\Transform</Filter>
     </ClCompile>
     <ClCompile Include="MeshRenderUI.cpp">
-      <Filter>UI\3. Inspector\CompoenntUI\MeshRender</Filter>
+      <Filter>02. UI\3. Inspector\CompoenntUI\MeshRender</Filter>
     </ClCompile>
     <ClCompile Include="ComponentUI.cpp">
-      <Filter>UI\3. Inspector\CompoenntUI</Filter>
+      <Filter>02. UI\3. Inspector\CompoenntUI</Filter>
     </ClCompile>
     <ClCompile Include="ListUI.cpp">
-      <Filter>UI\5. ListUI</Filter>
+      <Filter>02. UI\5. ListUI</Filter>
     </ClCompile>
     <ClCompile Include="Light2DUI.cpp">
-      <Filter>UI\3. Inspector\CompoenntUI\Light2D</Filter>
+      <Filter>02. UI\3. Inspector\CompoenntUI\Light2D</Filter>
     </ClCompile>
     <ClCompile Include="Collider2DUI.cpp">
-      <Filter>UI\3. Inspector\CompoenntUI\Collider2D</Filter>
+      <Filter>02. UI\3. Inspector\CompoenntUI\Collider2D</Filter>
     </ClCompile>
     <ClCompile Include="Animator2DUI.cpp">
-      <Filter>UI\3. Inspector\CompoenntUI\Animator2D</Filter>
+      <Filter>02. UI\3. Inspector\CompoenntUI\Animator2D</Filter>
     </ClCompile>
     <ClCompile Include="CameraUI.cpp">
-      <Filter>UI\3. Inspector\CompoenntUI\Camera</Filter>
+      <Filter>02. UI\3. Inspector\CompoenntUI\Camera</Filter>
     </ClCompile>
     <ClCompile Include="TilemapUI.cpp">
-      <Filter>UI\3. Inspector\CompoenntUI\Tilemap</Filter>
+      <Filter>02. UI\3. Inspector\CompoenntUI\Tilemap</Filter>
     </ClCompile>
     <ClCompile Include="TilemapEditor.cpp">
-      <Filter>UI\3. Inspector\CompoenntUI\Tilemap\Editor</Filter>
+      <Filter>02. UI\3. Inspector\CompoenntUI\Tilemap\Editor</Filter>
     </ClCompile>
     <ClCompile Include="AnimationEditor.cpp">
-      <Filter>UI\3. Inspector\CompoenntUI\Animator2D\Editor</Filter>
+      <Filter>02. UI\3. Inspector\CompoenntUI\Animator2D\Editor</Filter>
     </ClCompile>
     <ClCompile Include="ParticleSystemUI.cpp">
-      <Filter>UI\3. Inspector\CompoenntUI\Particle</Filter>
+      <Filter>02. UI\3. Inspector\CompoenntUI\Particle</Filter>
     </ClCompile>
     <ClCompile Include="TreeUI.cpp">
-      <Filter>UI\6. Module\TreeUI</Filter>
+      <Filter>02. UI\6. Module\TreeUI</Filter>
     </ClCompile>
     <ClCompile Include="AssetUI.cpp">
-      <Filter>UI\3. Inspector\AssetUI</Filter>
+      <Filter>02. UI\3. Inspector\AssetUI</Filter>
     </ClCompile>
     <ClCompile Include="TextureUI.cpp">
-      <Filter>UI\3. Inspector\AssetUI\TextureUI</Filter>
+      <Filter>02. UI\3. Inspector\AssetUI\TextureUI</Filter>
     </ClCompile>
     <ClCompile Include="SoundUI.cpp">
-      <Filter>UI\3. Inspector\AssetUI\Sound</Filter>
+      <Filter>02. UI\3. Inspector\AssetUI\Sound</Filter>
     </ClCompile>
     <ClCompile Include="MeshUI.cpp">
-      <Filter>UI\3. Inspector\AssetUI\MeshUI</Filter>
+      <Filter>02. UI\3. Inspector\AssetUI\MeshUI</Filter>
     </ClCompile>
     <ClCompile Include="MeshDataUI.cpp">
-      <Filter>UI\3. Inspector\AssetUI\MeshData</Filter>
+      <Filter>02. UI\3. Inspector\AssetUI\MeshData</Filter>
     </ClCompile>
     <ClCompile Include="MaterialUI.cpp">
-      <Filter>UI\3. Inspector\AssetUI\MaterialUI</Filter>
+      <Filter>02. UI\3. Inspector\AssetUI\MaterialUI</Filter>
     </ClCompile>
     <ClCompile Include="GraphicsShaderUI.cpp">
-      <Filter>UI\3. Inspector\AssetUI\GraphicsShader</Filter>
+      <Filter>02. UI\3. Inspector\AssetUI\GraphicsShader</Filter>
     </ClCompile>
     <ClCompile Include="ComputeShaderUI.cpp">
-      <Filter>UI\3. Inspector\AssetUI\ComputeShader</Filter>
+      <Filter>02. UI\3. Inspector\AssetUI\ComputeShader</Filter>
     </ClCompile>
     <ClCompile Include="Inspector_init.cpp">
-      <Filter>UI\3. Inspector</Filter>
+      <Filter>02. UI\3. Inspector</Filter>
     </ClCompile>
     <ClCompile Include="ParamUI.cpp">
-      <Filter>UI\6. Module\ParamUI</Filter>
+      <Filter>02. UI\6. Module\ParamUI</Filter>
     </ClCompile>
     <ClCompile Include="MenuUI.cpp">
-      <Filter>UI\4. MenuUI</Filter>
+      <Filter>02. UI\4. MenuUI</Filter>
+    </ClCompile>
+    <ClCompile Include="HYGameObjectEx.cpp">
+      <Filter>01. Manager\02. EditorObjMgr\GameObjectEx</Filter>
+    </ClCompile>
+    <ClCompile Include="HYEditorObjMgr.cpp">
+      <Filter>01. Manager\02. EditorObjMgr</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
