--- a/Project/Client/Client.vcxproj
+++ b/Project/Client/Client.vcxproj
@@ -161,6 +161,8 @@
     <ClInclude Include="Content.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="GraphicsShaderUI.h" />
+    <ClInclude Include="HYEditorObjMgr.h" />
+    <ClInclude Include="HYGameObjectEx.h" />
     <ClInclude Include="HYImGuiMgr.h" />
     <ClInclude Include="imconfig.h" />
     <ClInclude Include="imgui.h" />
@@ -202,6 +204,8 @@
     <ClCompile Include="ComputeShaderUI.cpp" />
     <ClCompile Include="Content.cpp" />
     <ClCompile Include="GraphicsShaderUI.cpp" />
+    <ClCompile Include="HYEditorObjMgr.cpp" />
+    <ClCompile Include="HYGameObjectEx.cpp" />
     <ClCompile Include="HYImGuiMgr.cpp" />
     <ClCompile Include="imgui.cpp" />
     <ClCompile Include="imgui_demo.cpp" />
