3가지 문제 해결, Level 상태 구현, Editor Camera 생성

--- a/Project/Client/Client.vcxproj
+++ b/Project/Client/Client.vcxproj
@@ -161,6 +161,7 @@
     <ClInclude Include="Content.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="GraphicsShaderUI.h" />
+    <ClInclude Include="HYCameraMoveScript.h" />
     <ClInclude Include="HYEditorObjMgr.h" />
     <ClInclude Include="HYGameObjectEx.h" />
     <ClInclude Include="HYImGuiMgr.h" />
@@ -204,6 +205,7 @@
     <ClCompile Include="ComputeShaderUI.cpp" />
     <ClCompile Include="Content.cpp" />
     <ClCompile Include="GraphicsShaderUI.cpp" />
+    <ClCompile Include="HYCameraMoveScript.cpp" />
     <ClCompile Include="HYEditorObjMgr.cpp" />
     <ClCompile Include="HYGameObjectEx.cpp" />
     <ClCompile Include="HYImGuiMgr.cpp" />
