--- a/Project/Scripts/Scripts.vcxproj
+++ b/Project/Scripts/Scripts.vcxproj
@@ -131,7 +131,9 @@
     </Link>
     <PreBuildEvent>
       <Command>cd $(SolutionDir)
-call ScriptsCopy.bat</Command>
+call ScriptsCopy.bat
+cd $(SolutionDir)CodeGen\
+call CodeGen.exe</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -154,7 +156,9 @@ call ScriptsCopy.bat</Command>
     </Link>
     <PreBuildEvent>
       <Command>cd $(SolutionDir)
-call ScriptsCopy.bat</Command>
+call ScriptsCopy.bat
+cd $(SolutionDir)CodeGen\
+call CodeGen.exe</Command>
     </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -162,6 +166,7 @@ call ScriptsCopy.bat</Command>
     <ClInclude Include="HYBackgroundScript.h" />
     <ClInclude Include="HYMissileScript.h" />
     <ClInclude Include="HYPlayerScript.h" />
+    <ClInclude Include="HYScriptMgr.h" />
     <ClInclude Include="HYSpotLightScript.h" />
     <ClInclude Include="pch.h" />
   </ItemGroup>
@@ -169,6 +174,7 @@ call ScriptsCopy.bat</Command>
     <ClCompile Include="HYBackgroundScript.cpp" />
     <ClCompile Include="HYMissileScript.cpp" />
     <ClCompile Include="HYPlayerScript.cpp" />
+    <ClCompile Include="HYScriptMgr.cpp" />
     <ClCompile Include="HYSpotLightScript.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
