--- a/Project/Client/Client.vcxproj
+++ b/Project/Client/Client.vcxproj
@@ -160,13 +160,16 @@
     <ClInclude Include="ComputeShaderUI.h" />
     <ClInclude Include="Content.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="FSMUI.h" />
     <ClInclude Include="GraphicsShaderUI.h" />
     <ClInclude Include="HYCameraMoveScript.h" />
     <ClInclude Include="HYCreateTempLevel.h" />
     <ClInclude Include="HYEditorObjMgr.h" />
     <ClInclude Include="HYGameObjectEx.h" />
+    <ClInclude Include="HYIdleState.h" />
     <ClInclude Include="HYImGuiMgr.h" />
     <ClInclude Include="HYLevelSaveLoad.h" />
+    <ClInclude Include="HYTraceState.h" />
     <ClInclude Include="imconfig.h" />
     <ClInclude Include="imgui.h" />
     <ClInclude Include="imgui_impl_dx11.h" />
@@ -207,13 +210,16 @@
     <ClCompile Include="ComponentUI.cpp" />
     <ClCompile Include="ComputeShaderUI.cpp" />
     <ClCompile Include="Content.cpp" />
+    <ClCompile Include="FSMUI.cpp" />
     <ClCompile Include="GraphicsShaderUI.cpp" />
     <ClCompile Include="HYCameraMoveScript.cpp" />
     <ClCompile Include="HYCreateTempLevel.cpp" />
     <ClCompile Include="HYEditorObjMgr.cpp" />
     <ClCompile Include="HYGameObjectEx.cpp" />
+    <ClCompile Include="HYIdleState.cpp" />
     <ClCompile Include="HYImGuiMgr.cpp" />
     <ClCompile Include="HYLevelSaveLoad.cpp" />
+    <ClCompile Include="HYTraceState.cpp" />
     <ClCompile Include="imgui.cpp" />
     <ClCompile Include="imgui_demo.cpp" />
     <ClCompile Include="imgui_draw.cpp" />
